syntax = "proto3";

package auth;
option go_package = "product/proto/auth";

message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    uint64 user_id = 1;
}

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}